--- a/css/style.css
+++ b/css/style.css
@@ -18,3 +18,44 @@ body{min-width: 330px;}
 /* https://stephanwagner.me/only-css-loading-spinner */
 @keyframes spinner {to {transform: rotate(360deg);}}
 .spinner:before {content: '';box-sizing: border-box;position: absolute;top:50%;left:50%;width:50px;height:50px;margin-top:-10px;margin-left:-10px;border-radius:50%;border:2px solid #ccc;border-top-color: #333;animation:spinner .6s linear infinite;}
+
+
+/* Modal */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    max-width: 550px;
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
